<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tvIncomeNameLabel"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/tv_name_label" />

        <EditText
            android:id="@+id/etIncomeName"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:hint="@string/tv_income_name_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tvIncomeAmountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/tv_amount_label" />

        <EditText
            android:id="@+id/etIncomeAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tv_amount_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tvIncomeDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/tv_date_label" />

        <EditText
            android:id="@+id/etIncomeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/et_date_hint"
            android:importantForAutofill="no"
            android:inputType="date" />

        <ImageButton
            android:id="@+id/ibIncomeDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ib_calendar"
            app:srcCompat="@drawable/ic_calendar_black_24dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btnSaveNewIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_save"
            android:layout_span="3"/>
    </TableRow>

</TableLayout>