<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvExpenseNameLabel"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight=".15"
            android:text="@string/tv_name_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/etExpenseName"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight=".85"
            android:hint="@string/tv_expense_name_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvExpenseAmountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight=".15"
            android:text="@string/tv_amount_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/etExpenseAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight=".85"
            android:hint="@string/tv_amount_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvExpenseDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight=".15"
            android:text="@string/tv_date_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/etExpenseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight=".75"
            android:enabled="false"
            android:hint="@string/et_date_hint"
            android:importantForAutofill="no"
            android:inputType="date" />

        <ImageButton
            android:id="@+id/ibExpenseDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight=".15"
            android:contentDescription="@string/ib_calendar"
            app:srcCompat="@drawable/ic_calendar_black_24dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical">

        <Button
            android:id="@+id/btnSaveNewExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="8dp"
            android:layout_span="3"
            android:text="@string/btn_save"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </TableRow>

</TableLayout>