<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvIncomeDetailName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvIncomeDetailAmountLabel"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight=".3"
            android:gravity="center_vertical"
            android:text="@string/tv_amount_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tvIncomeDetailAmount"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight=".15"
            android:gravity="start|center_vertical"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvIncomeDetailDateLabel"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight=".3"
            android:gravity="center_vertical"
            android:text="@string/tv_date_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tvIncomeDetailDateValue"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight=".15"
            android:gravity="start|center_vertical"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnDeleteIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/btn_delete" />

    </TableRow>

</LinearLayout>