<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight=".9">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvExpenseDetailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvExpenseDetailAmountLabel"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="0"
            android:gravity="center_vertical"
            android:text="@string/tv_amount_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tvExpenseDetailAmount"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvExpenseDetailDateLabel"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="0"
            android:gravity="center_vertical"
            android:text="@string/tv_date_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tvExpenseDetailDateValue"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical">

        <Button
            android:id="@+id/btnDeleteExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/btn_delete" />
    </TableRow>
</TableLayout>